--- a/php/css/custom.css
+++ b/php/css/custom.css
@@ -4,5 +4,13 @@
 }
 .btn {
     border-radius: 0px !important;
-    width: 150px;
+    width: 142px;
+}
+.container
+{
+    margin-top:200px;
+}
+.extrawidth
+{
+    margin-left:70px;
 }
